# win11-diagnostics

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/stage-dev-env/: action.yml
.github/workflows/: ci.yml  release.yml  smoke.yml  track-progress.yml
crates/sidebar-adapter-battery/: Cargo.toml
crates/sidebar-adapter-battery/src/: backend.rs  lib.rs
crates/sidebar-adapter-net/: Cargo.toml
crates/sidebar-adapter-net/src/: backend.rs  lib.rs
crates/sidebar-adapter-nvml/: Cargo.toml
crates/sidebar-adapter-nvml/src/: backend.rs  lib.rs
crates/sidebar-adapter-ohm/: Cargo.toml
crates/sidebar-adapter-ohm/src/: http.rs  lhm_model.rs  lib.rs  pipe.rs
crates/sidebar-adapter-ohm/tests/fixtures/: lhm_data.json
crates/sidebar-adapter-pdh/: Cargo.toml
crates/sidebar-adapter-pdh/src/: backend.rs  lib.rs
crates/sidebar-adapter-sysinfo/: Cargo.toml
crates/sidebar-adapter-sysinfo/src/: backend.rs  lib.rs
crates/sidebar-app/: Cargo.toml
crates/sidebar-app/benches/: layer_smoke.rs  poll_cost.rs
crates/sidebar-app/src/: event_channel.rs  gui.rs  i18n.rs  lib.rs  main.rs  nfr.rs  poller.rs  progress_parser.rs  provider_registry.rs  shutdown.rs  tier_probe.rs  updater.rs
crates/sidebar-app/src/gui/: about.rs  acks_store.rs  alert_indicator.rs  bandwidth_panel.rs  first_run.rs  metric_list.rs  metric_row.rs  mod.rs  settings_panel.rs  sparkline.rs  status_pill.rs  theme.rs
crates/sidebar-app/src/parse_threshold/: mod.rs
crates/sidebar-app/tests/: customization_audit.rs  dev_env_scripts.rs  e2e_launch_smoke.rs  every_crate_compiles.rs  lhm_negative_paths.rs  msrv_contract.rs  nfr_cold_start.rs  nfr_rss.rs  nfr_sqlite_rss.rs  no_duplicate_deps.rs  profile_contract.rs  reference_machine_runner.rs  regression_harness.rs  runtime_no_egress.rs  signing_policy.rs  smoke_checklist.rs  ui_snapshots.rs  workspace_shape.rs
crates/sidebar-app/tests/snapshots/: layer_smoke.rs  story_11_3_harness_bootstrap.rs
crates/sidebar-bandwidth/: Cargo.toml
crates/sidebar-bandwidth/src/: accountant.rs  accumulator.rs  clock.rs  lib.rs  view.rs
crates/sidebar-domain/: Cargo.toml
crates/sidebar-domain/src/: adapter_metadata.rs  aggregate.rs  alert.rs  billing.rs  config.rs  error.rs  event.rs  format.rs  graph.rs  lib.rs  locale.rs  reading.rs  reposition.rs  smooth.rs  snapshot.rs
crates/sidebar-persistence/: Cargo.toml
crates/sidebar-persistence/src/: bandwidth_repo.rs  lib.rs  migrate.rs  schema.rs
crates/sidebar-platform/: Cargo.toml
crates/sidebar-platform/src/: appbar.rs  dpi.rs  dwm.rs  fs.rs  hotkey.rs  lib.rs  monitors.rs  net_info.rs  ohm_supervisor.rs  single_instance.rs  startup.rs  theme_bridge.rs  window.rs
crates/sidebar-platform/tests/: monitors_smoke.rs
crates/sidebar-sensor/: Cargo.toml
crates/sidebar-sensor/src/: classifier.rs  descriptor.rs  lib.rs  provider.rs
docs/: PRD.md  architecture.md  customization-parity.md  dev-env.md  grants.md  privacy-policy.md  v1-feature-parity-gap-analysis.md
docs/backlog/: PROGRESS.md  README.md  epics-and-stories.md  guardrails.md  nfr-thresholds.md  regression-harness.md  tdd-fixtures.md
installer/: PORTABLE-README.txt  README.md  sidebar.iss
installer/portable/: README.txt
installer/winget/: manifest.yaml
resources/: ohm.sha256
resources/sidebar-monitor-host/: Program.cs  README.md
scripts/: README.md  build_host.ps1  codex-env.ps1  env.ps1  fetch_ohm.ps1  verify-dev-env.ps1
signpath/: code-signing-policy.md
tests/: README.md  every_crate_compiles.rs  msrv_contract.rs  no_duplicate_deps.rs  workspace_shape.rs
verify/: layer-smoke.ps1  pending-HITL-gates.md  reference-machine.ps1  smoke-checklist.md  smoke-checklist.ps1
verify/evidence/: .gitignore
