[package]
name = "sidebar-adapter-battery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar adapter: battery percent/state/power-rate via starship-battery (Story 3.3)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind, Unit, SensorId, BatteryState
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider, SensorDescriptor
starship-battery = { workspace = true }           # MIT OR Apache-2.0 — cross-platform battery state
tracing = { workspace = true }                    # MIT — debug!/warn! for adapter diagnostics

[dev-dependencies]
mockall = { workspace = true }                    # MIT OR Apache-2.0 — auto-mock BatteryBackend trait

[lints]
workspace = true
