[package]
name = "sidebar-adapter-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar adapter: per-NIC RX/TX raw byte counters via Win32 GetIfEntry2 (Story 3.5)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind, Unit, SensorId
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider, SensorDescriptor
windows = { workspace = true, features = [
    "Win32_Foundation",                 # WIN32_ERROR / ERROR_SUCCESS
    "Win32_NetworkManagement_IpHelper", # GetIfEntry2 + GetIfTable2 + MIB_IF_ROW2 + MIB_IF_TABLE2 + FreeMibTable
    "Win32_NetworkManagement_Ndis",     # NET_LUID_LH + IF_OPER_STATUS (referenced by MIB_IF_ROW2)
] }                                     # MIT OR Apache-2.0 — Win32 IpHelper FFI (per-NIC InOctets/OutOctets)
tracing = { workspace = true }          # MIT — debug!/warn! for adapter diagnostics

[dev-dependencies]
mockall = { workspace = true }          # MIT OR Apache-2.0 — auto-mock NetBackend trait

[lints]
workspace = true
