[package]
name = "sidebar-adapter-nvml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar adapter: NVIDIA GPU utilization/temperature via nvml-wrapper (Story 3.2)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind, Unit, SensorId
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider, SensorDescriptor
nvml-wrapper = { workspace = true }               # MIT OR Apache-2.0 — NVIDIA GPU (NVIDIA-only)
tracing = { workspace = true }                    # MIT — debug!/warn! for adapter diagnostics

[dev-dependencies]
mockall = { workspace = true }                    # MIT/Apache-2.0 — auto-mock NvmlBackend trait

[lints]
workspace = true
