[package]
name = "sidebar-adapter-ohm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar adapter: LibreHardwareMonitor HTTP bridge (ureq + /data.json, Story 3.6)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind, Unit, SensorId
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider, SensorDescriptor
ureq = { workspace = true }                       # MIT OR Apache-2.0 — sync HTTP client for LHM /data.json (AD-2)
serde_json = { workspace = true }                 # MIT OR Apache-2.0 — LHM JSON tree parsing
serde = { workspace = true }                      # MIT OR Apache-2.0 — derive for LhmNode
thiserror = { workspace = true }                  # MIT OR Apache-2.0 — OhmError derive
tracing = { workspace = true }                    # MIT — debug!/warn! for adapter diagnostics

[dev-dependencies]
mockall = { workspace = true }                    # MIT/Apache-2.0 — auto-mock HttpClient trait

[lints]
workspace = true
