[package]
name = "sidebar-adapter-pdh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar adapter: per-drive disk R/W throughput via Win32 PDH (Story 3.4)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind, Unit, SensorId
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider, SensorDescriptor
windows = { workspace = true, features = [
    "Win32_Foundation",          # ERROR_SUCCESS
    "Win32_System_Performance",  # Pdh* FFI + PDH_FMT_* structs/constants
] }                                                # MIT OR Apache-2.0 — Win32 PDH FFI (per-drive disk R/W bytes/sec)
tracing = { workspace = true }                     # MIT — debug!/warn! for adapter diagnostics

[dev-dependencies]
mockall = { workspace = true }                     # MIT OR Apache-2.0 — auto-mock PdhBackend trait

[lints]
workspace = true
