[package]
name = "sidebar-adapter-sysinfo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar adapter: sysinfo-backed CPU/RAM/disk/processes/uptime (Story 3.1)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind, Unit, SensorId
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider, SensorDescriptor
sysinfo = { workspace = true }                    # MIT — CPU/RAM/disk/process telemetry (forces MSRV 1.95)
tracing = { workspace = true }                    # MIT — debug!/warn! for adapter diagnostics

[dev-dependencies]
mockall = { workspace = true }                    # MIT/Apache-2.0 — auto-mock SysinfoBackend trait

[lints]
workspace = true
