[package]
name = "sidebar-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar binary — Win11 hardware diagnostics sidebar"

# Story 0.2: serde + serde_json needed for parse_threshold (criterion estimate.json).
# Story 7.1: provider registry depends on sidebar-sensor (trait + classifier) +
# every shipped adapter (sidebar-adapter-*). These are path deps → no new
# external licenses enter the manifest.
[dependencies]
serde = { workspace = true }            # MIT/Apache-2.0 — derive for Estimate
serde_json = { workspace = true }       # MIT/Apache-2.0 — NFR-1 bench parsing
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind (transitively used by adapters)
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider trait, SensorDescriptor, classify_for_v1
sidebar-adapter-sysinfo = { path = "../sidebar-adapter-sysinfo" }  # internal — SysinfoAdapter (Tier::Basic)
sidebar-adapter-battery = { path = "../sidebar-adapter-battery" }  # internal — BatteryAdapter (Tier::Basic)
sidebar-adapter-pdh = { path = "../sidebar-adapter-pdh" }          # internal — PdhAdapter (Tier::Basic)
sidebar-adapter-net = { path = "../sidebar-adapter-net" }          # internal — NetAdapter (Tier::Both)
sidebar-adapter-nvml = { path = "../sidebar-adapter-nvml" }        # internal — NvmlAdapter (Tier::Basic, NVML-unavailable-safe)
sidebar-adapter-ohm = { path = "../sidebar-adapter-ohm" }          # internal — OhmAdapter (Tier::Full)

# Dev-only deps for workspace-level integration tests (tests/*.rs in this
# crate) + parse_threshold unit tests.
[dev-dependencies]
cargo_metadata = { workspace = true }   # MIT — workspace introspection
semver = { workspace = true }           # MIT/Apache-2.0 — version parsing
tempfile = { workspace = true }         # MIT/Apache-2.0 — TempDir for parse_threshold tests (F1)
toml = { workspace = true }             # MIT/Apache-2.0 — parse Cargo.toml in profile_contract test
which = "7"                             # MIT — locate pwsh.exe in dev_env_scripts test

[lints]
workspace = true
