[package]
name = "sidebar-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar binary — Win11 hardware diagnostics sidebar"

# Story 0.2: serde + serde_json needed for parse_threshold (criterion estimate.json).
# Story 7.1: provider registry depends on sidebar-sensor (trait + classifier) +
# every shipped adapter (sidebar-adapter-*). These are path deps → no new
# external licenses enter the manifest.
# Story 7.2: poller task uses tokio (broadcast + interval + spawn_blocking) and
# tokio-util (CancellationToken — same shutdown signal the accountant uses).
# tracing is already a transitive dep of the adapters; pulling it in here makes
# the poller's structured logging explicit. All workspace-managed, so no new
# license entries beyond the already-vetted workspace set (T-32).
# Story 7.3: sidebar-platform dep brings OhmSupervisor (probe engine, Story
# 6.4); the launch-time two-tier probe delegates to it. The trait exposure
# (HttpClient) is a re-export from sidebar-adapter-ohm (already a dep), so no
# new transitive license surface.
# Story 8.1: egui + eframe bring the GUI shell (MIT, pre-pinned in the
# workspace manifest). egui_kittest (MIT) is the headless test harness for
# F8 snapshot/label assertions.
[dependencies]
serde = { workspace = true }            # MIT/Apache-2.0 — derive for Estimate
serde_json = { workspace = true }       # MIT/Apache-2.0 — NFR-1 bench parsing
tokio = { workspace = true }            # MIT — broadcast + interval + spawn_blocking (AD-6)
tokio-util = { workspace = true }       # MIT — CancellationToken (shutdown signal, T-19)
tracing = { workspace = true }          # MIT — structured logging (panic-skip G15)
tracing-subscriber = { workspace = true }  # MIT — log subscriber for the binary launch sequence (Integration main.rs)
thiserror = { workspace = true }        # MIT/Apache-2.0 — PollerError derive (consistent with sidebar-domain::error)
chrono = { workspace = true }           # MIT OR Apache-2.0 — NaiveDate for bandwidth panel tests (Story 8.4)
toml = { workspace = true }             # MIT OR Apache-2.0 — config.toml serialization (Integration main.rs persist_config)
rusqlite = { workspace = true }         # MIT — SQLite bindings (Integration main.rs accountant thread: open Connection on the LocalSet thread)
egui = { workspace = true }             # MIT — immediate-mode GUI (Story 8.1)
eframe = { workspace = true }           # MIT — egui desktop shell (Story 8.1)
raw-window-handle = { workspace = true } # MIT OR Apache-2.0 — CreationContext root HWND extraction
windows = { workspace = true, features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind, Config::ohm.http_port (T-45, Story 7.3)
sidebar-bandwidth = { path = "../sidebar-bandwidth" }  # internal — BandwidthView DTO (Story 5.3, Story 8.4 render target) + BandwidthAccountant (Integration main.rs)
sidebar-persistence = { path = "../sidebar-persistence" }  # internal — schema::init + bandwidth_repo (Integration main.rs accountant spawn)
sidebar-sensor = { path = "../sidebar-sensor" }   # internal — SensorProvider trait, SensorDescriptor, classify_for_v1, ProviderTier
sidebar-platform = { path = "../sidebar-platform" }  # internal — OhmSupervisor (probe engine, Story 6.4) — Story 7.3 delegates to it
sidebar-adapter-sysinfo = { path = "../sidebar-adapter-sysinfo" }  # internal — SysinfoAdapter (Tier::Basic)
sidebar-adapter-battery = { path = "../sidebar-adapter-battery" }  # internal — BatteryAdapter (Tier::Basic)
sidebar-adapter-pdh = { path = "../sidebar-adapter-pdh" }          # internal — PdhAdapter (Tier::Basic)
sidebar-adapter-net = { path = "../sidebar-adapter-net" }          # internal — NetAdapter (Tier::Both)
sidebar-adapter-nvml = { path = "../sidebar-adapter-nvml" }        # internal — NvmlAdapter (Tier::Basic, NVML-unavailable-safe)
sidebar-adapter-ohm = { path = "../sidebar-adapter-ohm" }          # internal — OhmAdapter (Tier::Full) + RealHttpClient (Integration main.rs probe)

# Dev-only deps for workspace-level integration tests (tests/*.rs in this
# crate) + parse_threshold unit tests.
[dev-dependencies]
cargo_metadata = { workspace = true }   # MIT — workspace introspection
semver = { workspace = true }           # MIT/Apache-2.0 — version parsing
tempfile = { workspace = true }         # MIT/Apache-2.0 — TempDir for parse_threshold tests (F1)
toml = { workspace = true }             # MIT/Apache-2.0 — parse Cargo.toml in profile_contract test
mockall = { workspace = true }          # MIT/Apache-2.0 — MockHttpClient for tier_probe tests (Story 7.3)
which = "7"                             # MIT — locate pwsh.exe in dev_env_scripts test
egui_kittest = { workspace = true }     # MIT — headless egui test harness (F8, Story 8.1)
criterion = { workspace = true }        # MIT/Apache-2.0 — NFR-1 criterion benches (Story 10.1)
sysinfo = { workspace = true }           # MIT — real T-31 idle CPU calibration for benches

[[bench]]
name = "layer_smoke"
harness = false

[[bench]]
name = "poll_cost"
harness = false

[lints]
workspace = true
