[package]
name = "sidebar-bandwidth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar bandwidth accountant: accumulate + flush + rollover (Stories 5.1-5.3)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading filtering (NetRxBytes/NetTxBytes)
chrono = { workspace = true }                      # MIT OR Apache-2.0 — NaiveDate for cycle_start

[dev-dependencies]
proptest = { workspace = true }                    # MIT OR Apache-2.0 — property tests for wraparound (F7)

[lints]
workspace = true
