[package]
name = "sidebar-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar SQLite-backed bandwidth state store (AD-11, Stories 4.1-4.3)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Error::Sqlite variant (Story 0.6)
rusqlite = { workspace = true }                   # MIT — SQLite bindings; bundled compiles sqlite3 (~1 MB, T-6)

[dev-dependencies]
tempfile = { workspace = true }                   # MIT OR Apache-2.0 — TempDir fixture (F1)

[lints]
workspace = true
