[package]
name = "sidebar-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar crate: sidebar-platform — Win32 platform layer (window, DWM, AppBar, DPI) — Stories 6.1/6.2/6.3"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Error::Platform for FFI failures
windows = { workspace = true, features = [
    "Win32_Foundation",                # HWND, BOOL, RECT, LPARAM
    "Win32_Graphics_Dwm",              # DwmSetWindowAttribute + DWMWA_* (peek excl, cloak)
    "Win32_UI_WindowsAndMessaging",    # SetWindowPos + HWND_TOPMOST + SWP_* (window.rs)
    "Win32_UI_Shell",                  # SHAppBarMessage + APPBARDATA + ABM_*/ABE_* (appbar.rs)
    "Win32_UI_HiDpi",                  # SetProcessDpiAwarenessContext + GetDpiForWindow (dpi.rs)
] }                                    # MIT OR Apache-2.0 — Win32 FFI (DWM peek/cloak, AppBar, SetWindowPos, DPI v2)
tracing = { workspace = true }         # MIT — debug!/warn! for platform diagnostics

[dev-dependencies]
mockall = { workspace = true }         # MIT OR Apache-2.0 — reserved for trait seams (Story 6.x smoke tests are real-FFI #[ignore])

[lints]
workspace = true
