[package]
name = "sidebar-sensor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "sidebar SensorProvider trait + cost classifier (keystone, AD-4/AD-5)"

[dependencies]
sidebar-domain = { path = "../sidebar-domain" }   # internal — Reading, MetricKind
tracing = { workspace = true }                     # MIT — warn! for rejected sources
static_assertions = "1"                            # MIT — assert_impl_all for Send+Sync (compile-time)

[dev-dependencies]
mockall = { workspace = true }                     # MIT/Apache-2.0 — auto-mock trait (cfg_attr(test))

[lints]
workspace = true
